[package]
name = "idempotency-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = [
  "http1",
  "http2",
  "json",
  "macros",
  "matched-path",
  "tokio",
  "query",
], default-features = true }
hyper = { version = "1.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
  "stream",
  "trust-dns",
  "http2",
], default-features = false }
dotenvy = "0.15"
log = "0.4"
structured-logger = "1"
http = "1"
rustis = { version = "0.12", features = ["pool"] }
bb8 = "0.8"
async-trait = "0.1"
serde = "1"
serde_json = "1"
serde_bytes = "0.11"
ciborium = "0.2"
anyhow = "1"
k256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.21"
sha3 = "0.10"
