[workspace]
members = [
  "src/idempotent-proxy-types",
  "src/idempotent-proxy-server",
  "src/idempotent-proxy-canister",
  "examples/eth-canister",
  "examples/eth-canister-lite",
]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
version = "1.1.6"
edition = "2021"
repository = "https://github.com/ldclabs/idempotent-proxy"
keywords = ["idempotent", "reverse", "proxy", "icp"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
axum = { version = "0.7", features = [
  "http1",
  "http2",
  "json",
  "macros",
  "matched-path",
  "tokio",
  "query",
], default-features = true }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "rustls-tls-native-roots",
  "json",
  "gzip",
  "stream",
  "http2",
  # "hickory-dns",
], default-features = true }
dotenvy = "0.15"
futures = "0.3"
log = "0.4"
structured-logger = "1"
http = "1"
rustis = { version = "0.13", features = ["pool"] }
bb8 = "0.8"
async-trait = "0.1"
serde = "1"
serde_json = "1"
serde_bytes = "0.11"
ciborium = "0.2"
anyhow = "1"
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2"
base64 = "0.22"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
