[package]
name = "idempotent-proxy-canister"
description = "idempotent-proxy canister"
repository = "https://github.com/ldclabs/idempotent-proxy/tree/main/src/idempotent-proxy-canister"
publish = false

version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[dependencies]
async-trait = "0.1"
bytes = "1.6"
candid = "0.10"
ic-cdk = "0.14"
ic-cdk-timers = "0.8"
ic-stable-structures = "0.6"
url = "2.5"
base64 = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
sha3 = { workspace = true }
