[package]
name = "idempotent-proxy-canister"
description = "A ICP canister Make Idempotent Proxy service on-chain."
repository = "https://github.com/ldclabs/idempotent-proxy/tree/main/src/idempotent-proxy-canister"
publish = false

version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
http = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-timers = "0.8"
ic-stable-structures = "0.6"
ic_cose_types = "0.1"
getrandom = { version = "0.2", features = ["custom"] }
