[package]
name = "idempotent-proxy-server"
description = "idempotent-proxy server"
repository = "https://github.com/ldclabs/idempotent-proxy/tree/main/src/idempotent-proxy-server"
publish = true

version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[[bin]]
name = "idempotent-proxy-server"

[dependencies]
axum = { workspace = true }
axum-server = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
dotenvy = { workspace = true }
log = { workspace = true }
structured-logger = { workspace = true }
http = { workspace = true }
rustis = { workspace = true }
bb8 = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
anyhow = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
sha3 = { workspace = true }
chrono = { workspace = true }
idempotent-proxy-types = { path = "../idempotent-proxy-types", version = "0.3" }
