[package]
name = "idempotent-proxy-types"
description = "types of idempotent-proxy"
repository = "https://github.com/ldclabs/idempotent-proxy/tree/main/src/idempotent-proxy-types"
publish = true

version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]

[dependencies]
axum = { workspace = true }
http = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
anyhow = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
sha3 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
rand_core = "0.6"
