[package]
name = "idempotent-proxy-types"
description = "types of idempotent-proxy"
repository = "https://github.com/ldclabs/idempotent-proxy/tree/main/src/idempotent-proxy-types"
publish = true

version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]

[dependencies]
http = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
rand_core = "0.6"
hex = { package = "hex-conservative", version = "0.2", default-features = false, features = [
  "alloc",
] }
