[package]
name = "idempotent-proxy-worker"
publish = false

version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.3"

[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
